# example-publisher

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py  supervisord.conf
.github/workflows/: build-and-push-image.yaml  image-push.yaml  main.yaml  poetry.yaml  pre-commit.yaml
config/: config.toml  config.yaml  ronin_config.toml
example_publisher/: __main__.py  config.py  provider.py  publisher.py  pythd.py
example_publisher/api/: health_check.py
example_publisher/providers/: coin_gecko.py  hermes.py  jupiter.py  pyth_replicator.py  ronin_katana.py
example_publisher/tests/: test_jupiter.py  test_pyth_replicator_manual_aggregate.py
jupiter-api-v-6-client/: README.md  pyproject.toml
jupiter-api-v-6-client/jupiter_api_v_6_client/: __init__.py
jupiter-api-v-6-client/jupiter_api_v_6_client/api/default/: get_indexed_route_map.py  get_program_id_to_label.py  get_quote.py  post_swap.py  post_swap_instructions.py
jupiter-api-v-6-client/jupiter_api_v_6_client/models/: __init__.py  account_meta.py  get_program_id_to_label_response_200.py  get_quote_exclude_dexes_item.py  get_quote_swap_mode.py  indexed_route_map_response.py  indexed_route_map_response_indexed_route_map.py  instruction.py  platform_fee.py  quote_response.py  route_plan_step.py  swap_info.py  swap_instructions_response.py  swap_mode.py  swap_request.py  swap_response.py
publisher/: __main__.py  aust.py  coin_gecko.py  config.py  provider.py  publisher.py  pythd.py
publisher/providers/: coin_gecko.py  pyth_replicator.py
publisher/tests/: test_pyth_replicator_manual_aggregate.py
pyth_publisher/: __main__.py  config.py  provider.py  publisher.py
pyth_publisher/api/: health_check.py
pyth_publisher/providers/: coin_gecko.py  pyth_replicator.py
pyth_publisher/tests/: test_pyth_replicator_manual_aggregate.py
requirements/: environment_dev.yaml  requirements.txt
